<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.capstone.ako.addms.startDriving">

    <!-- Layout for the current speed and speed limit -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/BlueColor"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="40dp"
        android:paddingTop="40dp">
        <!-- layout for the current speed display -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/right_border"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="35dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cSpeed"
                android:textColor="#D3D0D0"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/currentSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00"
                android:textColor="@color/whitColor"
                android:textSize="55sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/SI_km_h"
                android:textColor="@color/whitColor"
                android:textSize="15sp" />

        </LinearLayout>

        <!--Layout for speed limit display -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="35dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sLimit"
                android:textColor="#D3D0D0"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/speedLimit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00"
                android:textColor="#FFFF50"
                android:textSize="55sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/SI_km_h"
                android:textColor="@color/whitColor"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <!--Layout for distance covered and time elapsed -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="60dp">

        <!-- Layout for the distance covered display -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/shadow"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="15dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bottom_grey_border"
                android:paddingBottom="10dp"
                android:text="@string/dCovered"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/distanceCoverd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00"
                android:textSize="55sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="km"
                android:textSize="15sp" />
        </LinearLayout>

        <!--Layout for elapsed time display -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/shadow"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="15dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bottom_grey_border"
                android:paddingBottom="10dp"
                android:text="@string/eTime"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Chronometer
                android:id="@+id/ch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#707070"
                android:textSize="55sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="min"
                android:textSize="15sp" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/yellColor"
            android:onClick="home"
            android:text="Stop Driving"
            android:textColor="@color/login_titleTextColor" />

    </LinearLayout>


</LinearLayout>
